Modernize GitHub MCP Server with Java 21 features and production improvements
Major enhancements:
- Replace Runtime.exec with ProcessBuilder for secure command execution
- Add virtual threads (Java 21) for concurrent I/O operations
- Implement proper timeout handling (30 seconds) and resource cleanup
- Use String.formatted() instead of concatenation for cleaner code
- Add Records (Java 17) for immutable command result data structures
- Use pattern matching for instanceof checks

Code quality improvements:
- Add Spotless plugin with Google Java Format for consistent code style
- Fix branch parameter bug in getFileContents method
- Make default branch configurable via application properties
- Enable virtual threads in Spring Boot configuration

Testing and documentation:
- Add comprehensive integration tests for service functionality
- Create CLAUDE.md guide for AI assistants working with the project
- Update README with detailed Claude Desktop integration instructions
- Include JSON configuration examples for MCP client setup

Build and configuration:
- Upgrade to use modern Java features while maintaining compatibility
- Add proper error handling with descriptive messages
- Implement configurable GitHub default branch support
- Add development command documentation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>